fix: Corrected "Success" spelling to "Succes" across manifest, service worker, HTML titles, and various UI texts.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Success Class",
-  "short_name": "Success Class",
+  "name": "Succes Class",
+  "short_name": "Succes Class",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0d0d0d",
